# oneFileAIScripts

./: .gitignore  LICENSE  README.md
askPdf/: README.md  main.py  pyproject.toml
dndBioGenerator/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
pdfSummarise/: README.md  main.py  pyproject.toml
simpleSentiment/: README.md  main.py  pyproject.toml  source_file.txt
summaryTweetGenerator/: README.md  arxiv_search.py  main.py  pyproject.toml  source_file.txt
